[CDAP-14944] fix z-index of minimap vs node

--- a/cdap-ui/app/directives/dag-plus/my-dag.less
+++ b/cdap-ui/app/directives/dag-plus/my-dag.less
@@ -173,6 +173,7 @@ my-dag-plus {
       z-index: 2;
       .border-color-hover(@node-box-height-big);
       left: 30vw;
+      user-select: none;
 
       // Setting default node color
       .set-node-color(@transform-plugins-color);
